--- a/hr/templates/details.html
+++ b/hr/templates/details.html
@@ -54,7 +54,9 @@
                             <option value="New">New</option>
                             <option value="Ready to be interviewed">Ready to be interviewed</option>
                             <option value="Ready to be accepted">Ready to be accepted</option>
+{% if current_user.admin %}
                             <option value="Accepted">Accepted</option>
+{% endif %}
                             <option value="Denied">Denied</option>
                         </select>
                     </div>
