--- a/hr/templates/details.html
+++ b/hr/templates/details.html
@@ -95,6 +95,12 @@
             </td>
         </tr>
         <tr>
+            <td>Killboard</td>
+            <td><a class="waves-effect waves-light btn modal-trigger grey darken-1"
+                    href="https://zkillboard.com/search/{{ member.character_name }}/"
+                    target="_blank">View zKillBoard</a></td>
+        </tr>
+        <tr>
             <td>Notes</td>
             <td>
                 <a class="waves-effect waves-light btn modal-trigger grey darken-1" href="#modalNotes">Notes ...</a>
