Add advancement criteria note to personal page

--- a/hr/templates/personal.html
+++ b/hr/templates/personal.html
@@ -156,6 +156,10 @@
                         </tr>
                     </tbody>
                 </table>
+                <p>
+                    Please note that having all of these filled by Mentors doesn't mean that you're automatically advanced to <strong>Bro</strong>:
+                    it's still handled on a case by case basis.
+                </p>
             </td>
         </tr>
     </tbody>
