--- a/auth/templates/login.html
+++ b/auth/templates/login.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 <div class="center">
-  <h3 class="center">Use EVE's Single Sign-On to log in, Newbro and {{ config['CORPORATION'] }} alike:</h3>
+  <h3 class="center">Use EVE's Single Sign-On to log in:</h3>
   <a href="{{ url }}"><img src="https://i.imgur.com/qNdhCs4.png" alt="Click here to log in"></a>
 </div>
 {% endblock content %}
