--- a/auth/templates/hr/add_member.html
+++ b/auth/templates/hr/add_member.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'hr/base.html' %}
 
 
 {% block head %}
@@ -14,7 +14,7 @@
 <h4>A player can apply to the corp themselves; this page is a secondary method of adding them</h4>
 <h4 class="red-text">All character names are case-sensitive!</h4>
 <div class="card-panel">
-  <form action="{{ url_for('add_member') }}" method="POST" class="col s12">
+  <form action="{{ url_for('.add_member') }}" method="POST" class="col s12">
     <div class="row">
       <div class="input-field col s4">
         <label for="name">Character name</label>
