--- a/auth/templates/hr/base.html
+++ b/auth/templates/hr/base.html
@@ -35,37 +35,37 @@
         <ul class="right hide-on-med-and-down">
         {% if not current_user.is_anonymous %}
           {% if current_user.is_authenticated %}
-            <li><a href="{{ url_for('index') }}">My info</a></li>
+            <li><a href="{{ url_for('.index') }}">My info</a></li>
             {% if current_user.recruiter or current_user.mentor or current_user.admin %}
-              <li><a href="{{ url_for('membership') }}">Members</a></li>
+              <li><a href="{{ url_for('.membership') }}">Members</a></li>
               {% if current_user.recruiter or current_user.admin %}
-                <li><a href="{{ url_for('reports') }}">Reports</a></li>
+                <li><a href="{{ url_for('.reports') }}">Reports</a></li>
               {% endif %}
             {% endif %}
           {% endif %}
           {% if current_user.admin %}
-            <li><a href="{{ url_for('admin') }}">Admin</a></li>
+            <li><a href="{{ url_for('.admin') }}">Admin</a></li>
           {% endif %}
           <li><a href="{{ url_for('logout') }}">Log out</a></li>
         {% elif not request.endpoint == 'login' %}
-          <li><a href="{{ url_for('login') }}">Log in</a></li>
+          <li><a href="{{ url_for('.login') }}">Log in</a></li>
         {% endif %}
         </ul>
         <ul class="side-nav" id="mobile-demo">
         {% if not current_user.is_anonymous %}
           {% if current_user.is_authenticated %}
-            <li><a href="{{ url_for('index') }}">My info</a></li>
-            {% if current_user.member.status == 'Recruiter' or current_user.admin %}
-              <li><a href="{{ url_for('membership') }}">Members</a></li>
-              <li><a href="{{ url_for('reports') }}">Reports</a></li>
+            <li><a href="{{ url_for('.index') }}">My info</a></li>
+            {% if member.status == 'Recruiter' or current_user.admin %}
+              <li><a href="{{ url_for('.membership') }}">Members</a></li>
+              <li><a href="{{ url_for('.reports') }}">Reports</a></li>
             {% endif %}
           {% endif %}
           {% if current_user.admin %}
-            <li><a href="{{ url_for('admin') }}">Admin</a></li>
+            <li><a href="{{ url_for('.admin') }}">Admin</a></li>
           {% endif %}
           <li><a href="{{ url_for('logout') }}">Log out</a></li>
         {% elif not request.endpoint == 'login' %}
-          <li><a href="{{ url_for('login') }}">Log in</a></li>
+          <li><a href="{{ url_for('.login') }}">Log in</a></li>
         {% endif %}
         </ul>
       </div>
