--- a/auth/templates/hr/membership.html
+++ b/auth/templates/hr/membership.html
@@ -1,11 +1,11 @@
-{% extends 'base.html' %}
+{% extends 'hr/base.html' %}
 
 
 {% block content %}
 <div class="clearfix">
   <h2 class="left">Members and Applicants</h2>
 {% if current_user.recruiter or current_user.admin %}
-  <a class="right btn-floating btn-large waves-effect waves-light grey darken-1" href="{{ url_for('add_member') }}">
+  <a class="right btn-floating btn-large waves-effect waves-light grey darken-1" href="{{ url_for('.add_member') }}">
     <i class="material-icons">add</i>
   </a>
 {% endif %}
@@ -13,15 +13,15 @@
 
 <div class="row pad-top">
   <div class="col s12">
-    <a href="{{ url_for('membership') }}"
+    <a href="{{ url_for('.membership') }}"
       class="btn waves-effect waves-light btn-small grey darken-1">
       Normal view
     </a>
-    <a href="{{ url_for('membership') }}?show_hidden=1"
+    <a href="{{ url_for('.membership') }}?show_hidden=1"
       class="btn waves-effect waves-light btn-small grey darken-1">
       Show hidden members
     </a>
-    <a href="{{ url_for('membership') }}?show_applications=1"
+    <a href="{{ url_for('.membership') }}?show_applications=1"
       class="btn waves-effect waves-light btn-small grey darken-1">
       Show applications
     </a>
@@ -67,7 +67,7 @@
                       <td>{{ member.main }}</td>
                       <td>{{ member.get_alt_names() | join(', ') }}</td>
                       <td class="small">
-                        <a href="{{ url_for('details', id=member.id) }}"
+                        <a href="{{ url_for('.details', id=member.id) }}"
                           class="btn waves-effect waves-light btn-small grey darken-1">
                           Details
                         </a>
