--- a/auth/templates/hr/base.html
+++ b/auth/templates/hr/base.html
@@ -30,7 +30,7 @@
   <nav>
     <div class="nav-wrapper">
       <div class="container">
-        <a class="brand-logo">GETIN</a>
+        <a class="brand-logo" href="/">GETIN</a>
         <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
         <ul class="right hide-on-med-and-down">
         {% if not current_user.is_anonymous %}
