--- a/auth/templates/landing.html
+++ b/auth/templates/landing.html
@@ -21,6 +21,12 @@
         To apply for the corporation, review your application status, or
         see your training process, click <a href="{{ url_for('hr.index') }}">here</a> to visit HR.
       </p>
+      <br><br>
+      <span class="card-title"><a href="{{ url_for('wiki.index') }}">Wiki</a></span>
+      <p>
+        To read, add, and update wiki articles about the alliance, wormholes, or EVE,
+        click <a href="{{ url_for('wiki.index') }}">here</a> to visit the wiki.
+      </p>
     </div>
   </div>
 </div>
