--- a/auth/templates/hr/base.html
+++ b/auth/templates/hr/base.html
@@ -28,7 +28,7 @@
 
 <header>
   <nav>
-    <div class="nav-wrapper">
+    <div class="nav-wrapper grey darken-3">
       <div class="container">
         <a class="brand-logo" href="/">GETIN</a>
         <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
