--- a/auth/templates/wiki/base.html
+++ b/auth/templates/wiki/base.html
@@ -1,19 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>GETIN Auth</title>
+  <title>GETIN Wiki</title>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/global.css') }}">
   <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
-  <link rel="shortcut icon" href="{{ url_for('static', filename='images/favicon.ico') }}">
-  <style>
-    div.card-panel p {
-      font-size: 1.2em;
-    }
-  </style>
   <script>
     $(document).ready(function() {
       setTimeout(function() {
@@ -24,27 +18,50 @@
   </script>
   {% block head %}{% endblock head %}
 </head>
-<body class="grey lighten-5">
+<body class="grey lighten-4">
 
 <header>
   <nav>
     <div class="nav-wrapper grey darken-3">
       <div class="container">
-        <a class="brand-logo" href="/">GETIN</a>
+        <a class="brand-logo" href="/">GETIN Wiki <span class="red-text text-lighten-1">Alpha</span></a>
         <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
         <ul class="right hide-on-med-and-down">
-        {% if not current_user.is_anonymous %}
-          <li><a href="{{ url_for('logout') }}">Log out</a></li>
-        {% elif not request.endpoint == 'login' %}
+          <li><a href="{{ url_for('.page', namespace='public', name='Index') }}">Index</a></li>
+          <li><a href="{{ url_for('.sitemap') }}">Sitemap</a></li>
+        {% if current_user.is_authenticated %}
+          <li><a href="{{ url_for('.recent_changes') }}">Recent changes</a></li>
+        {% endif %}
+        {% if current_user.is_anonymous and not request.endpoint == 'login' %}
           <li><a href="{{ url_for('login') }}">Log in</a></li>
+        {% else %}
+          {% if current_user.wiki_mod %}
+            <li><a href="{{ url_for('.review_changes') }}">Submission Review</a></li>
+          {% endif %}
+          {% if current_user.admin %}
+            <li><a href="{{ url_for('.admin') }}">Admin</a></li>
+          {% endif %}
+          <li><a href="{{ url_for('logout') }}">Logout <strong>{{ current_user.name }}</strong></a></li>
         {% endif %}
         </ul>
         <ul class="side-nav" id="mobile-demo">
-        {% if not current_user.is_anonymous %}
-          <li><a href="{{ url_for('logout') }}">Log out</a></li>
-        {% elif not request.endpoint == 'login' %}
-          <li><a href="{{ url_for('login') }}">Log in</a></li>
+          <li><a href="{{ url_for('.page', namespace='public', name='Index') }}">Index</a></li>
+          <li><a href="{{ url_for('.sitemap') }}">Sitemap</a></li>
+        {% if current_user.is_authenticated %}
+          <li><a href="{{ url_for('.recent_changes') }}">Recent changes</a></li>
         {% endif %}
+        {% if current_user.is_anonymous and not request.endpoint == 'login' %}
+          <li><a href="{{ url_for('login') }}">Log in</a></li>
+        {% else %}
+          {% if current_user.wiki_mod %}
+            <li><a href="{{ url_for('.review_changes') }}">Submission Review</a></li>
+          {% endif %}
+          {% if current_user.admin %}
+            <li><a href="{{ url_for('.admin') }}">Admin</a></li>
+          {% endif %}
+          <li><a href="{{ url_for('logout') }}">Logout <strong>{{ current_user.name }}</strong></a></li>
+        {% endif %}
+        </ul>
         </ul>
       </div>
     </div>
@@ -59,6 +76,8 @@
           {% if message %}
             {% if category == 'success' %}
               <div class="card-panel green lighten-1 flashed disappear">
+            {% elif category == 'warning' %}
+              <div class="card-panel yellow darken-1 flashed disappear">
             {% else %}
               <div class="card-panel red lighten-1 flashed">
             {% endif %}
