Fix redirect issue in hr subapp

--- a/auth/templates/hr/join.html
+++ b/auth/templates/hr/join.html
@@ -62,7 +62,7 @@
   </form>
 </div>
 {% else %}
-You've put in an application, and it's status is <strong>{{ member.status }}</strong>.
+You've put in an application, and its status is <strong>{{ member.status }}</strong>.
 <br><br>
 {% if not member.reddit %}
   If you have a reddit account, why not <a href="{{ reddit_link }}">link it</a>?
